--- a/index.html
+++ b/index.html
@@ -66,5 +66,40 @@ Papa.parse(sheetUrl, {
 });
 </script>
 
+<h2>Submit a new file</h2>
+
+<form id="uploadForm">
+  <input name="name" placeholder="Name" required><br>
+  <input name="description" placeholder="Description" required><br>
+  <input name="keywords" placeholder="Keywords"><br>
+
+  <input type="file" name="file"><br>
+  <input name="link" placeholder="Or paste a file link"><br>
+
+  <button type="submit">Submit</button>
+</form>
+
+<p id="status"></p>
+
+<script>
+const API_URL = "https://YOUR-CLOUD-RUN-URL/submit";
+
+document.getElementById("uploadForm").addEventListener("submit", async e => {
+  e.preventDefault();
+
+  const formData = new FormData(e.target);
+
+  const res = await fetch(API_URL, {
+    method: "POST",
+    body: formData
+  });
+
+  const text = await res.text();
+  document.getElementById("status").innerText =
+    res.ok ? "Submitted successfully!" : text;
+});
+</script>
+
+
 </body>
 </html>
